really have the install script in great shape.